--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   
-  <title>牛C网福利APP推荐</title>
+  <title>18PPS影音 - 网站提供成人线上影音服务</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="renderer" content="webkit">
   <meta name="keywords" content="直播,视频,手机,女优," />
